--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,4 +18,4 @@ jobs:
 
       - run:
           name: notify build is finished
-          command: echo "The build is finished!
+          command: echo "The build is finished!"
